  * Intervention is now based on a minumum 0.50 second interval
  * Extended scope now covers Mac OS again (previously removed)
- Improves 'ProtectNVRAM' Implementation
  * Now ensures this is reset on each loop through the RefindPlus Main Loop
  * This ensures the filtering is not on if UEFI Windows boot fails
  * Only has cosmetic relevance but best practice
- Amends 'ScaleUI' Implementation
  * Now checks the resolution of the longest and shortest sides for automatic scaling
  * Previously only checked the vertical resolution
  * This allows rotated screens to be properly accounted for
  * Some rare monitors, such as the 30" Apple Cinema Display, may be wrongly identified as HiDPI
  * This is because EDID information is not used at this time
  * However, the more common WQHD monitors are correctly identified as not being HiDPI monitors
  * Laptops with 'Retina' screens should be correctly identified as having HiDPI monitors


0.13.2.AJ (06 Oct 2021):
-----------------------
- Fixes 'PreBoot' Volume Filtering in REL Builds
- Deactivates Log Level 5


0.13.2.AH (05 Oct 2021):
-----------------------
- Adds "PreferHiddenIcons" Feature
  * This functionality allows prioritising the use of ".VolumeIcon" image icons for loaders
- Adds Non-Standard UEFI 2.x Implementation Resilience
  * Some UEFI 2.x implementations may be incomplete with some functionality missing
  * This is typically due to customisation of the firmware as on Late Intel Macs such as the MacMini8,1
  * This affected running the DEBUG build on such units
  * RefindPlus now accommodates this situation.
- Adds Forced Shutdown on Secure Boot Setup Failure
  * RefindPlus will now shutdown if meant to use secure boot but this could not be set up
- Fixes Failure to Detect Linux Partitions
  * Linux partitions were not detected and therefore, could not be booted by RefindPlus
- Fixes Implicit Casting of Some Config Integers